<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/title_img"
        android:src="@drawable/menu_title" />

    <ImageButton
        android:id="@+id/credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/score"
        android:layout_below="@+id/score"
        android:background="@null"
        android:contentDescription="@string/credit_img"
        android:src="@drawable/credits_btn" />

    <ImageButton
        android:id="@+id/sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/play"
        android:layout_below="@+id/play"
        android:background="@null"
        android:contentDescription="@string/sound_img"
        android:src="@drawable/sound_btn" />

    <ImageButton
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginRight="20dp"
        android:layout_toLeftOf="@+id/score"
        android:background="@null"
        android:contentDescription="@string/play_img"
        android:src="@drawable/play_btn" />

    <ImageButton
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/title"
        android:layout_marginRight="50dp"
        android:background="@null"
        android:contentDescription="@string/score_img"
        android:src="@drawable/score_btn" />

</RelativeLayout>
