<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#dd3300"
        android:padding="20dp"
        android:text="@string/credits_title"
        android:textColor="#000"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView1"
        android:padding="15dp"
        android:text="@string/me"
        android:textColor="#dd3300"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/TextView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView2"
        android:padding="15dp"
        android:text="@string/sohail"
        android:textColor="#dd3300"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/TextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/TextView3"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/ok"
        android:textColor="#dd3300"
        android:textSize="22sp" />

</RelativeLayout>
